# terminal-invaders

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: README.md  terminal-invaders.rb
src/: main.rs
